--- a/rootdir/etc/init.bacon.rc
+++ b/rootdir/etc/init.bacon.rc
@@ -21,7 +21,7 @@ on early-init
     chown system system /sys/kernel/debug/kgsl/proc
 
 on init
-    export LD_SHIM_LIBS "/system/vendor/lib/libqomx_jpegenc.so|libboringssl-compat.so:/system/vendor/lib/libmmqjpeg_codec.so|libboringssl-compat.so:/system/lib/libfacenet.so|libprotobuf-cpp-haxx.so"
+    export LD_SHIM_LIBS "/system/vendor/lib/libqomx_jpegenc.so|libboringssl-compat.so:/system/vendor/lib/libmmqjpeg_codec.so|libboringssl-compat.so"
     export LD_PRELOAD /system/lib/libboringssl-compat.so
 
     # Set permissions for persist partition
@@ -178,7 +178,6 @@ on boot
     chown nfc nfc /dev/pn54x
 
 on post-fs-data
-    mount none /system/vendor/lib/libfacenet-32.so /system/lib/libfacenet.so bind
     mkdir /data/media 0770 media_rw media_rw
 
     # NFC: create data/nfc for nv storage
